apps/prod/syncthing/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
