apps/prod/syncthing/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: syncthing-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:XbZW3Qx/9ZoV8kvuwZTYBs15yN8uB/KYBhZnoP3HbI62bnK/,iv:tqng3LX+e8fIXdIHMXMtfi2pPFB+PX77RpMOz9eiyMs=,tag:Hc096A6WjvGqCVEBDjjr5w==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:iQYqiLKl6Kau75EMpBqnbPIOqDDozW50aNFl9m3zqL097Z7c,iv:bW7rHI9ahVMOHNcaSqETiJD7FbC57BJCd6A8sFD0azI=,tag:zQD7iPEeElgESvH+wktCLA==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtWVRYSG1ObUpUbi9LZmdi
[...]
            L02tXFQ3m5OVwmyFOlNhRgvjArM6CNgpfs/go22ulM+g5y74fVCKZA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-25T21:57:46Z"
    mac: ENC[AES256_GCM,data:JjEJZV6y4+esgLrmb/6qJCIVqJha8vspiMaTvnxjaV+mVJyV9GY9GCYLcBzKHT7f+21HQ3gLLBvYGT+ljVtFXhhyOKyR0JNsVzbLPcsyCjcPeY5kuRFBdyB5dGh2u29OW+mDsqiS7ef6kbd1GiCj1qHrTFmdxJ80tc8C6si4uJY=,iv:PNGUQAyRZiY+K1d8jNI2hVFNBkj4wC+2LZNmoH7gh/E=,tag:Mq02PUiD4CC8iPW8+mlWPg==,type:str]
    pgp:
        - created_at: "2024-06-20T14:22:21Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ZMSh+NltRLpndc7JDueqSHq32WIhjfSKXBQocZXAAoK2
[...]
            =1FU2
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
