apps/prod/syncthing/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:yrX6AGH3MjUEzQF0uck4gWbHl0FMDNjXbQE=,iv:pZUR5WvSal16mbnHYeMq0xGeSuj5ytbt+ZqLOdp6iaQ=,tag:bgexR67Qa1gHRa3SCoQSlA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: syncthing
    namespace: syncthing
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:HgL6hUjR/liGsljMUZ9Xrc8FHv7Oi6P3OkWUn/4+qiq0ysD0euqGaFKR1E4=,iv:HvNy9JXnrDASWIF7kT+WJjgK+crop4w9QLkpUt3sbTM=,tag:1vAAhxfdiygK+e9Vi2Ln5Q==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: syncthing-web
              namespace: syncthing
    tls:
        domains:
            - main: ENC[AES256_GCM,data:VXkkWNZxSfMcEXLl08dG1iBIG3dIKLHX4cA=,iv:5S2dOJ4IH4Ncao+twxZ6gDZRx614GqzQBs9Wg6PBsHY=,tag:CkVmuamWHpBt+MCj5OHccg==,type:str]
              sans:
                - ENC[AES256_GCM,data:pluvGJyg4WmP9tuPvch6K69gRV04bnl+sR0m,iv:Vz6wiT632YyaV4MzOiU0o32xrQfiMuoVp5R1C/D2NK4=,tag:e6kELAjZxvdgZFOhQONaqw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: syncthing-web-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4M2lWOGk3cithT2RKK2xL
[...]
            LcPKL9ti2D/+8g2JExUPUX9KBC98vUDvv3sxRh00tns9oIJ2gzc6Sg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-26T18:13:13Z"
    mac: ENC[AES256_GCM,data:r55cgOTkw39rR7AtW2rMQOQKDXPHOk3i0XCp5Ng/9LYEa66Er4sGlO1ySnUqlrtn9g2Rb9sk9JWvCUNyzHkECqJxnfxog1EOZ2QiyVvz/2yEsO0SEGRFpL/2BoX+O2o5mZgHETdql6Ts20M6yfKIvvh6wRBAm8H36Y2KgIwPkc4=,iv:A5N31FeKDXjb8DrF/Y+eYIuSoIffV5D/yX1WTrdP31o=,tag:XI0wRWCZ0N37xL42ux+8aw==,type:str]
    pgp:
        - created_at: "2024-06-20T14:43:10Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cXx6Imi9faI2rT+m1RkRQVKjdauHfqyQ0RggITRmwT2q
[...]
            =SyzD
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
