apps/prod/syncthing/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: syncthing.storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:p0xPW8kJRP4Nd+wdqA6TQe1Eqj2AjO7FEC/m79IyIF6Afpdw,iv:37LUqGwMBd02v+yF9DlYIEkbDmaLNTPDvKdno14zfiA=,tag:alXG0U4EsNaXuQMBVzAJ1Q==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:T/Kj9lhEVENjuwzsTRV817WfOvQMqqrmzdY=,iv:KdfrxXTjSI4EicRkFs+jJ0CA47xFRjlFWrsOZgYGxyE=,tag:FHYh16N4cHBpqYEhxlvQYw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: syncthing-staging
    namespace: syncthing
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:/8aLFvwIpivYjO2fg+WC9MGXpY+jsuDOprPD2A6Ws9yWxmFBR34hZpO7q78=,iv:SHCDIwsBFvPL6lFb2rtfYMxyIaSys9vPF57VUTYcngY=,tag:1ixLmd1c4ZvWdeGX6jSh2A==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: syncthing-web
              namespace: syncthing
    tls:
        domains:
            - main: ENC[AES256_GCM,data:SjIIevyLHG624lj/mWpFwtN/vmRxWHe1Faw=,iv:Wq9UieKwep0n0LU3ncnTPYelRqZ2GO+k47eMNqAVx4A=,tag:N9gwdPjxAdvCKLnNd4e8ZA==,type:str]
              sans:
                - ENC[AES256_GCM,data:zjy5LRozQ/HIRzsUXGNM/Z9m6Byh04/jK5eZ,iv:y1jNCg3keOHkUhFPuOg7ZYyEDkAhwjbCIRUAs+9eS78=,tag:AGuvE0uAa0IboIHwZXsYPQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: syncthing-web-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHcDBsUmM0UHBlNVl6elp4
[...]
            UZndue4hBMfKREpxApA4iI93Rt/FpvbauNOQ0N2/R2cgvpJjPf6oHw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-13T14:28:04Z"
    mac: ENC[AES256_GCM,data:vngKrpa3Z/r16wIewMTY1sL6DChz06jtliEx1ljiWd9TQUdUmL1lm4U4AkliCTI+LonRauBR2dpoAWroCTtSWWOZFQQbX1JJos5I5kbYjeQGNdUYyzexYrjUSAAJ/Z3E/BrSv60Fu0BRVwwr7i2hWI1TEsrcBFdwYoKZRIXJzLU=,iv:MJIYAI7o8t/as9qPRqfUNoNVe0uXVTgjVDXv/Jsy8Eg=,tag:bgCrM75YF9Chn1YOs2HcNQ==,type:str]
    pgp:
        - created_at: "2024-06-21T23:56:27Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9Fb/aZ3RFl3Y7Bo3wgp3cC8B+urpgLni6wx9/C/BSu0DC
[...]
            =nvoA
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
